# causal_ehr_mimic

./: .cruft.json  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  LICENSE  Makefile  README.md  pyproject.toml
caumim/: __init__.py  constants.py  meta_concepts.py  reports_utils.py  study_meta_concepts.py  utils.py
caumim/acquisition/: build_concepts.py
caumim/data_acquisition/: build_concepts.py  data_acquisition.py
caumim/description/: utils.py
caumim/experiments/: cate_exploration_albumin_for_sepsis.py  configurations.py  immortal_time_bias_albumin_for_sepis.py  sensitivity_albumin_for_sepsis.py  sensitivity_confounders_albumin_for_sepsis.py  sensitivity_feature_aggregation_albumin_for_sepsis.py  sepsis_mortality_predictive_failure.py  study_albumin_for_sepsis.py  utils.py
caumim/features/: albumin_for_sepsis.py  baselines.py  utils.py
caumim/framing/: albumin_for_sepsis.py  stroke_cohort.py  utils.py
caumim/inference/: estimation.py  scores.py  utils.py
caumim/ontology/: mapping.py
caumim/target_population/: albumin_for_sepsis.py  stroke_cohort.py  utils.py
caumim/variables/: aggregation.py  selection.py  utils.py
data/: .gitignore
data/experiences/albumin_for_sepsis/estimates_20230502152640_matching/: 05-02-2023-15-26-40.parquet  05-02-2023-15-28-48.parquet  05-02-2023-15-30-44.parquet  05-02-2023-15-37-38.parquet  05-02-2023-15-40-03.parquet
data/experiences/albumin_for_sepsis/estimates_20230502154408/: 05-02-2023-15-44-19.parquet  05-02-2023-15-44-43.parquet  05-02-2023-15-44-58.parquet  05-02-2023-15-45-23.parquet
data/experiences/albumin_for_sepsis/estimates_20230505221239__est_lr__agg_first_last/: 05-05-2023-22-12-40.parquet  05-05-2023-22-12-48.parquet  05-05-2023-22-13-02.parquet  05-05-2023-22-13-09.parquet
data/experiences/albumin_for_sepsis/estimates_20230505221737__est_rf__agg_first_last/: 05-05-2023-22-27-31.parquet
data/experiences/albumin_for_sepsis/estimates_20230505__est_lr_rf__agg_first_last/: 05-05-2023-22-12-54.parquet  05-05-2023-22-13-01.parquet  05-05-2023-22-18-01.parquet  05-05-2023-22-18-26.parquet  05-05-2023-22-20-18.parquet  05-05-2023-22-22-18.parquet  05-05-2023-22-25-02.parquet
data/experiences/albumin_for_sepsis/estimates_20230505__est_lr_rf__agg_first_last_before_agg_refacto/: estimates_20230505__est_lr_rf__agg_first_last_consolidated
data/experiences/albumin_for_sepsis/estimates_20230517000236_est_lr_rf__agg_first_last/: 05-17-2023-00-11-16.parquet  05-17-2023-00-13-10.parquet  05-17-2023-00-13-15.parquet  (+7 more)
data/experiences/immortal_time_bias_double_robust_forest_agg_last/: 05-12-2023-04-54-01.parquet  05-12-2023-04-57-44.parquet  05-12-2023-05-07-23.parquet  05-12-2023-05-11-34.parquet  05-12-2023-05-13-50.parquet  05-23-2023-22-19-49.parquet  05-23-2023-22-23-14.parquet  05-23-2023-22-26-04.parquet  05-23-2023-22-26-11.parquet  05-23-2023-22-28-37.parquet  05-23-2023-22-30-42.parquet  05-23-2023-22-58-16.parquet
data/experiences/immortal_time_bias_double_robust_forest_agg_last__bs_10/: 05-23-2023-22-52-21.parquet  05-23-2023-22-55-01.parquet
data/experiences/predictive_failure__2023-07-21_14-58-34__obs_1/: scores.csv
data/experiences/predictive_failure__2023-07-25_22-04-47__obs_1__post_treatment_False/: scores.csv
data/experiences/predictive_failure__2023-07-26_18-28-05__obs_1__post_treatment_True_dummy_classifier/: scores.csv
docs/: Makefile
docs/source/: changelog.md  cli-usage.md  conf.py  data.md  index.md  notebooks.md  usage.md
docs/source/_static/: references.bib
docs/source/target_trials/: albumin_combination_for_sepsis.md  index.md
notebooks/: .gitignore  0_connect_mimic_with_duckdb.py  README.md  _1_framing_albumin_for_sepsis.py  _3_estimation__albumin_for_sepsis.py  _3_estimation__albumine_for_sepsis.py  apd__framing__hydrocortisone_fludrocortisone.py  apd__framing__oxygenation_for_myocardial_infarctus.py  framing_albumine_for_sepsis.py  p_albumine_for_sepsis.py  p_hydrocortisone_fludrocortisone.py  p_nbma_agent_for_ards.py  p_prone_position_for_ards.py  syntaxes_for_data_connections.py
notebooks/analysis/: sepsis_mortality_predictive_failure.py  study_albumine_for_sepsis.py
notebooks/populations/: README.md  p_albumine_for_sepsis.py  p_hydrocortisone_fludrocortisone.py  p_nbma_agent_for_ards.py  p_oxygenation_for_myocardial_infarctus.py  p_prone_position_for_ards.py
notebooks/tests/: 0_run_sql_to_duckdb.py  1_connect_to_psql.py  2_mapping.py
reports/: 0_description_albumin_for_sepsis.py  1_sensitivity_albumin_for_sepsis_report.py  2_immortal_bias_albumin_for_sepsis_report.py  3_feature_agg_sensitivity_albumin_for_sepsis_report.py  4_cate_albumin_for_sepsis_report.py  5_prediction_failure_report.py  6_confounder_sensitivity_albumin_for_sepsis_report.py  README.md  apd_output_gridsearch_tables.py  description_albumin_for_sepsis.py  report_albumin_for_sepsis.py
tests/: __init__.py  conftest.py  test_dummy.py
(+291 files in other folders)
