[tool.poetry]
name = "caumim"
version = "0.0.0"
description = "Caumim"
authors = ["Matthieu Doutreligne <matt.dout@gmail.com>"]
license = "EUPL-v1.2"
readme = "README.md"
repository = "https://gitlab.com/strayMat/caumim"
homepage = "https://gitlab.com/strayMat/caumim"
include = ["bin"]
keywords = []
classifiers = [
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

# [tool.poetry.urls]
# Changelog = "https://gitlab.com/strayMat/caumim/releases"

[tool.poetry.dependencies]
python = ">=3.8,<3.11"

# Project-Specific
python-dotenv = "^0.20.0"
click = "^8.0.4"
ibis-framework = {extras = ["duckdb"], version = "^5.0.0"}
polars = "^0.17.2"
ipdb = "^0.13.13"
loguru = "^0.7.0"
connectorx = ">=0.2.0a3"
scikit-learn = "1.1.3"
matplotlib = "^3.7.1"
seaborn = "^0.12.2"
zepid = "^0.9.1"
numpy = "1.23.5"
forestplot = "^0.3.1"
#dowhy = "^0.9.1"
#cython = "^0.29.34"
econml = "^0.14.0"
dowhy = "^0.9.1"

[tool.poetry.group.notebooks.dependencies]
# Jupyter Notebook
jupyter = "^1.0.0"
matplotlib = "^3.5.1"
jupytext = "^1.13.7"
[tool.poetry.group.documentation]
optional = true
[tool.poetry.group.documentation.dependencies]

# Documentation
importlib-metadata = { version = "^6" }
myst-parser = { version = "^1" }
pygments = { version = "^2.11.2" }
sphinx = { version = ">=4,<6" }
pydata-sphinx-theme = { version = "^0" }
sphinx-click = { version = "^4" }
sphinxcontrib-bibtex = "^2.5.0"
docutils = "^0.19"

[tool.poetry.group.dev.dependencies]
# Testing
pytest = "^7.1.1"
pytest-cov = "^3.0.0"
pytest-mock = "^3.7.0"
pytest-sugar = "^0.9.4"
# Décommenter pour avoir des tests parallèles
# pytest-xdist = "^2.5.0"
# Linting
## Type Checking and Data Validation
mypy = "^0.942" # Static type checker
## Code formatting
black = "^22.1.0" # see: https://black.readthedocs.io/en/stable/editor_integration.html
## Code quality
isort = "^5.10.1"
pylint = "^2.13.0"
## Detect secrets
detect-secrets = "^1.4.0"
## Security Issues
bandit = "^1.7.4"
## Doc string
interrogate = "^1.5.0"
## Automation and management
pre-commit = "^2.17.0"
## Upgrade syntax for newer versions of Python
pyupgrade = "^3.3.1"
## Linter for YAML files
yamllint = "1.29.0"
## various convenient hooks
pre-commit-hooks = "^4.4.0"
py-spy = "^0.3.14"
pyspy = "^0.1.1"

[tool.poetry.scripts]
cli = "bin.cli:cli"

#################################################################################
# Tooling configs                                                               #
#################################################################################
[tool.bandit]
exclude_dirs = ["tests/", ".*$"]

[tool.black]
line-length = 79
include = '\.pyi?$'

[tool.coverage.run]
branch = true
concurrency = ["multiprocessing"]
parallel = true
source = ["caumim"]

[tool.coverage.report]
exclude_lines =[
    "pragma: no cover",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]
fail_under = 70
show_missing = true
skip_covered = true

[tool.interrogate]
verbose = 0
quiet = false
fail-under = 0
color = true

[tool.isort]
profile = "black"
atomic = "true"
combine_as_imports = "true"
line_length = 79

[tool.mypy]
disallow_untyped_defs = false
files = ["caumim/*.py","bin/*.py"]
exclude = [
    "notebooks/config.py",
    '^(notebooks/.*\.py)$'
]
ignore_missing_imports = true
pretty = true
show_column_numbers = true
show_error_context = true
show_error_codes = true
[tool.pylint.main]
ignore-patterns = '^(notebooks/.*\.py)$'

[tool.pylint.basic]
good-names-rgxs = ["^Test_.*$", "logger"]

[tool.pylint.messages_control]
disable = [
  # Explicitly document only as needed
  "missing-module-docstring",
  "missing-class-docstring",
  "missing-function-docstring",
  # Black & Flake8 purview
  "line-too-long",
  "c-extension-no-member",
  # Ignore errors resulting from Jupyter notebook-style programming
  "invalid-name",
  "redefined-outer-name",
  "reimported",
  "ungrouped-imports",
  "wrong-import-order",
  "wrong-import-position",
]

[tool.pylint.reports]
output-format = "colorized"

[tool.pylint.similarities]
# Ignore imports when computing similarities.
ignore-imports = "yes"

[tool.cruft]
skip = [
    ".git",
    "README.md",
]
[tool.pytest.ini_options]
addopts = ["-rfsxX", "-l", "--tb=short", "--strict-markers", "-vv"]

xfail_strict = "true"
testpaths = ["tests",]
norecursedirs = [".*", "*.egg", "build", "dist",]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
